紧急备用版本，百度切记切换

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,7 +76,7 @@
                     android:layout_marginLeft="6dp"
                     android:background="@null"
                     android:hint="用户名"
-                    android:text="frobot02"
+                    android:text="hotel001"
                     android:inputType="textEmailAddress|text"
                     android:textSize="16sp" />
 
@@ -102,7 +102,7 @@
                     android:layout_marginLeft="6dp"
                     android:background="@null"
                     android:hint="密码"
-                    android:text="12345678"
+                    android:text="1234567890"
                     android:inputType="textPassword"
                     android:textSize="16sp" />
 
